[gd_scene load_steps=7 format=3 uid="uid://dqreeigpne122"]

[ext_resource type="Script" path="res://scripts/game/systems/move_picker/move_picker.gd" id="1_7l4ts"]
[ext_resource type="Script" path="res://scripts/game/systems/move_picker/game_move_selector_ai.gd" id="2_pvxna"]
[ext_resource type="Script" path="res://scripts/game/systems/move_picker/game_move_selector_interactive.gd" id="3_q8ivv"]
[ext_resource type="Script" path="res://scripts/game/systems/move_picker/game_move_highlight.gd" id="4_32ile"]
[ext_resource type="PackedScene" uid="uid://dk6q50tq0w026" path="res://scenes/game/systems/move_picker/path_highlight.tscn" id="5_h77ps"]
[ext_resource type="Script" path="res://scripts/game/systems/move_picker/piece_dragger.gd" id="6_eb2x5"]

[node name="MovePicker" type="Node"]
script = ExtResource("1_7l4ts")
metadata/selector_interactive = NodePath("InteractiveGameMoveSelector")
metadata/selector_ai = NodePath("AIGameMoveSelector")

[node name="AIGameMoveSelector" type="Node" parent="." node_paths=PackedStringArray("highlight")]
script = ExtResource("2_pvxna")
highlight = NodePath("../GameMoveHighlight")
_best_move_weight = 9
_second_move_weight = 1
capture_base_score = 0.93
grants_roll_base_score = 0.65
end_move_base_score = 0.5
regular_base_score = 0.4
safety_score_weight = 0.2
piece_progress_score_weight = 0.12

[node name="InteractiveGameMoveSelector" type="Node" parent="." node_paths=PackedStringArray("highlight")]
script = ExtResource("3_q8ivv")
highlight = NodePath("../GameMoveHighlight")

[node name="GameMoveHighlight" type="Node" parent="."]
script = ExtResource("4_32ile")
path_highlight_prefab = ExtResource("5_h77ps")

[node name="PieceDragger" type="Node" parent="." node_paths=PackedStringArray("selector")]
script = ExtResource("6_eb2x5")
selector = NodePath("../InteractiveGameMoveSelector")
bounds = Vector2(0.2, 0.2)
